--- a/.github/workflows/Build_Test.yml
+++ b/.github/workflows/Build_Test.yml
@@ -2,8 +2,8 @@ name: Build-Test
 
 on:
   push:
-#    branches:
-#      - main
+    branches:
+      - main
     tags:
       - '**'
 
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest]
-        swift: ["5.7"]
+        swift: ["5.6, 5.7, 5.8, 5.9"]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: fwal/setup-swift@v1
